# nodejs-server-server/api/swagger.yaml
@@ -170,6 +170,11 @@ paths:
         description: "Uploaded document file (JSON)"
         required: true
         type: "file"
+      - name: "image"
+        in: "formData"
+        description: "Uploaded image file (binary)"
+        required: false
+        type: "file"
       responses:
         200:
           description: "Successful response"
@@ -262,6 +267,57 @@ paths:
             type: "object"
             title: "Document"
             properties: {}
+        400:
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/error"
+        422:
+          description: "Invalid syntax"
+          schema:
+            $ref: "#/definitions/error"
+        500:
+          description: "Server error"
+          schema:
+            $ref: "#/definitions/error"
+        503:
+          description: "Service not available"
+          schema:
+            $ref: "#/definitions/error"
+      security: []
+      x-swagger-router-controller: "Meditor"
+  /getDocumentImage:
+    get:
+      summary: "Gets an image associated with a document"
+      description: "Gets an image associated with a document"
+      operationId: "getDocumentImage"
+      produces:
+        - "image/jpeg"
+        - "image/jpg"
+        - "image/png"
+        - "image/gif"
+        - "image/tiff"
+      parameters:
+      - name: "model"
+        in: "query"
+        description: "Name of the Model"
+        required: true
+        type: "string"
+      - name: "title"
+        in: "query"
+        description: "Title of the document"
+        required: true
+        type: "string"
+      - name: "version"
+        in: "query"
+        description: "Version of the document"
+        required: false
+        type: "string"
+        default: "latest"
+      responses:
+        200:
+          description: "Successful response"
+          schema:
+            type: file
         400:
           description: "Bad request"
           schema:
