# nodejs-server-server/controllers/Default.js
@@ -28,6 +28,19 @@ module.exports.getDocumentHistory = function getDocumentHistory (req, res, next)
     });
 };
 
+module.exports.getDocumentImage = function getDocumentImage (req, res, next) {
+  var model = req.swagger.params['model'].value;
+  var title = req.swagger.params['title'].value;
+  var version = req.swagger.params['version'].value;
+  Default.getDocumentImage(model,title,version)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.getModel = function getModel (req, res, next) {
   var name = req.swagger.params['name'].value;
   Default.getModel(name)
@@ -63,7 +76,8 @@ module.exports.listModels = function listModels (req, res, next) {
 
 module.exports.putDocument = function putDocument (req, res, next) {
   var file = req.swagger.params['file'].value;
-  Default.putDocument(file)
+  var image = req.swagger.params['image'].value;
+  Default.putDocument(file,image)
     .then(function (response) {
       utils.writeJson(res, response);
     })
