# nodejs-server-server/controllers/Meditor.js
@@ -1,11 +1,19 @@
 'use strict';
 
+var _ = require('lodash');
+var transliteration = require('transliteration');
 var utils = require('../utils/writer.js');
 var Default = require('../service/DefaultService');
-var MongoClient = require('mongodb').MongoClient;
+var mongo = require('mongodb');
+var MongoClient = mongo.MongoClient;
+var streamifier = require('streamifier');
+var GridStream = require('gridfs-stream');
+
+
 var MongoUrl = process.env.MONGOURL || "mongodb://localhost:27017/";
 var DbName = "meditor";
 
+var titlePath = 'parent.title';
 // Wrapper to parse JSON giving v8 a chance to optimize code
 function safelyParseJSON (jsonStr) {
   var jsonObj;
@@ -129,12 +137,139 @@ function addDocument (doc) {
           }
           db.close();
           var userMsg = "Inserted document";
-          resolve(userMsg);
+          resolve({message: userMsg, document: doc});
         });
       });
     });
   });
 }
+
+// Add an Image
+function addImage (parentDoc, imageFormParam) {
+  var validContentTypes = [ 'image/png', 'image/jpeg', 'image/jpg', 'image/gif', 'image/tiff' ];
+  var MAX_FILE_SIZE =  1 << 26;
+  var imageRecord = {
+    metadata: {
+      'x-meditor': {
+        modifiedOn: (new Date()).toISOString(),
+        modifiedBy: 'anonymous'
+      },
+      parent: {
+        _id: parentDoc._id,
+        model: parentDoc.model,
+        title: parentDoc.title,
+        version: parentDoc.version
+      }
+    },
+    filename: imageFormParam.originalname,
+    content_type: imageFormParam.mimetype,
+    mode: 'w'   
+  }
+
+  if (validContentTypes && validContentTypes.indexOf(imageFormParam.mimetype) === -1) {
+    return Promise.reject({
+      status: 400,
+      message: { message: 'Invalid file type. Use ' + validContentTypes.join(',') + ' file types.' }
+    });
+  }
+
+  return new Promise(function(resolve, reject) {
+    MongoClient.connect(MongoUrl, function(err, db) {
+      if (err) throw err;
+      var dbo = db.db(DbName);
+      var gfs = new GridStream(dbo, mongo);
+      var writeStream = gfs.createWriteStream(imageRecord);
+    
+      writeStream.on('close', function(data) {
+        db.close();
+        resolve("Inserted image");
+      });
+    
+      writeStream.on('error', function(err) {
+        db.close();
+        reject(err);
+      });
+
+      streamifier.createReadStream(imageFormParam.buffer).pipe(writeStream);
+    });
+  });
+};
+
+
+function getFileName (file) {
+  var filename = null;
+  if (!!file && !_.isEmpty(file.filename)) filename = file.filename.replace(/\.\w+$/, '');
+  // Credit: https://stackoverflow.com/questions/45239228/how-to-remove-invalid-characters-in-an-http-response-header-in-javascript-node-j
+  if (!!file.metadata && !_.isEmpty(_.get(file.metadata, titlePath))) filename = transliteration.slugify(_.get(file.metadata, titlePath));
+  if (!!file && !_.isEmpty(file.contentType) && file.contentType.indexOf('image/') !== -1) filename += file.contentType.replace(/.*\//, '.');
+  return filename;
+}
+
+// Get a stored image
+function getImage(model, title, version, res) {
+  return new Promise(function(resolve, reject) {
+    MongoClient.connect(MongoUrl, function(err, db) {
+      if (err) {
+        console.log(err);
+        throw err;
+      }
+      var dbo = db.db(DbName);
+      var gfs = new GridStream(dbo, mongo);
+      gfs.files.findOne({ filename: title }, function(metaErr, file) {
+        var readstream;
+        var headers;
+        var fileName;
+
+        if (metaErr) {
+          return resolve({
+            status: 500,
+            message: metaErr
+          });
+        }
+
+        if (!file) return resolve({ status: 404 });
+
+        headers = {'Content-Type': file.contentType};
+        fileName = getFileName(file);
+        if (!!fileName) headers['Content-Disposition'] = 'inline; filename="' + fileName + '"';
+
+        res.writeHead(200, headers);
+
+        readstream = gfs.createReadStream({ _id: file._id });
+
+        readstream.on('data', function(data) {
+          res.write(data);
+        });
+
+        readstream.on('end', function() {
+          try {
+            res.end();
+            resolve({ status: 200 });
+          } catch (e) {
+            console.log('Attempted to close image stream on resolved promise');
+          }
+        });
+
+        readstream.on('error', function(fileErr) {
+          // required to ensure end does not send 200 on error
+          resolve({
+            status: 500,
+            message: fileErr
+          });
+        });
+      });
+    });
+  });
+};
+
+module.exports.getDocumentImage = function putDocument (req, res, next) {
+  var params = {};
+  for ( var property in req.swagger.params ) {
+    params[property] = req.swagger.params[property].value;
+  }
+  getImage(params.model, params.title, params.version, res);
+};
+
 
 //Exported method to add a Document
 module.exports.putDocument = function putDocument (req, res, next) {
@@ -152,11 +287,20 @@ module.exports.putDocument = function putDocument (req, res, next) {
     };
     utils.writeJson(res, response, 400);
     return;
-  }
+  };
   // TODO: validate JSON based on schema
 
   // Insert the new Model
   addDocument(doc)
+  .then(function(savedDoc) {
+    if (!req.swagger.params.image) return Promise.resolve(savedDoc);
+    try {
+      return addImage(savedDoc.document, req.swagger.params.image.value);
+    } catch (e) {
+      console.log('Error saving image', e);
+      return Promise.reject('Error saving image');
+    }
+  })
   .then(function (response){
     utils.writeJson(res, {code:200, message:"Inserted document"}, 200);
   })
@@ -273,7 +417,7 @@ module.exports.getDocument = function listDocuments (req, res, next) {
   })
   .catch(function (response) {
     utils.writeJson(res, response);
-  });;
+  });
 };
 
 // Internal method to list documents
@@ -304,7 +448,7 @@ module.exports.getModel = function getModel (req, res, next) {
   })
   .catch(function (response) {
     utils.writeJson(res, response);
-  });;
+  });
 };
 
 // Internal method to list documents
